--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -25,6 +25,6 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "6.0.0-beta.3"
   }
 }
